<resources>
    <string name="app_name">Movietail</string>
    <string name="movie_image">Movie Image</string>
    <string name="language">Language:</string>
    <string name="vote_average">Vote average:</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="buttom_for_to_see_the_different_kind_of_movies">Buttom for to see the different kind of movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">Information</string>
    <string name="overview_information">You will see the trending movies that are outside in the cinema. You also will see the different actors and all the information about your favorite movies.</string>
    <string name="instructions_information">You will see this button in your home. With this button you can change the kind of trending movies. </string>
    <string name="instructions">Instructions</string>
    <string name="copyright">Copyright ®</string>
    <string name="api">Api:</string>
    <string name="api_information">https://www.themoviedb.org/</string>
    <string name="developer">Juan S Orozco Buitrago</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="casting">Casting</string>
    <string name="movie_poster">Movie poster</string>
    <string name="_7_5">7.5</string>
    <string name="en">en</string>
    <string name="action">Action</string>
    <string name="genres">Genres</string>
    <string name="now_in_cinema">Now in Cinema</string>
    <string name="popular_movies">Popular movies</string>
    <string name="right_page">Right Page</string>
</resources>