<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/account"
        android:title="@string/account"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person"/>

    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/holder"
        android:title=" "
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"/>

    <item android:id="@+id/help"
        android:title="Info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info"/>
</menu>