<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_background"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".view.fragments.credits.OverviewFragment">


    <ImageView
        android:id="@+id/movieImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/releaseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textColor="#FFF26464"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieImageView"
        tools:text="10/15/1996" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/courgette"
        android:textColor="#FFF26464"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateTextView"
        tools:text="Title" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />


    <ScrollView
        android:id="@+id/scrollOverview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/lightGray"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider"
                tools:text="Overview" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/lightGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/courgette"
                android:text="@string/genres"
                android:textColor="#FFF26464"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genresRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/genres_row" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:background="@drawable/movie_cardview_background">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="38dp"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:src="@drawable/star" />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:src="@drawable/star" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        app:cardBackgroundColor="#E4F8F8F8"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/overallTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/courgette"
                            android:padding="8dp"
                            android:text="@string/_7_5"
                            android:textColor="@color/purple_700"
                            android:textSize="16sp" />

                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="38dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/star" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/purple_200"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:background="@drawable/movie_cardview_background">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/sound"
                        android:scaleType="fitXY"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/movieCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/movie_cardview_background"
                        app:cardBackgroundColor="#E4F8F8F8"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/languageTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/courgette"
                            android:padding="8dp"
                            android:text="@string/en"
                            android:textAllCaps="true"
                            android:textColor="@color/purple_700"
                            android:textSize="16sp" />

                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/sound"
                        android:layout_marginEnd="8dp"
                        android:scaleType="fitXY"/>

                </LinearLayout>







            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>