<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/movie_background">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerTrendingMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:fontFamily="serif"
                android:text="@string/popular_movies"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

            </LinearLayout>

        </LinearLayout>



    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerNowInCine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shimmerTrendingMovies">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:fontFamily="serif"
                android:text="@string/now_in_cinema"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

            </LinearLayout>

        </LinearLayout>



    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:gravity="top|center"
                android:fontFamily="serif"
                android:text="@string/popular_movies"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/trendingMoviesScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingEnd="-5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTextView"
                tools:ignore="RtlSymmetry">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/moviesRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/movies_row" />

                    <ImageView
                        android:id="@+id/rightPageImageView"
                        android:layout_width="20dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white"
                        android:background="@drawable/button_background"
                        android:layout_marginVertical="16dp"
                        android:contentDescription="@string/right_page" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.core.widget.NestedScrollView>

            <TextView
                android:id="@+id/nowInCineTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:gravity="top|center"
                android:fontFamily="serif"
                android:text="@string/now_in_cinema"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trendingMoviesScrollView" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nowInCineScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingEnd="-5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nowInCineTextView"
                tools:ignore="RtlSymmetry">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/nowInCineRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/movies_row" />

                    <ImageView
                        android:id="@+id/rightPageCineImageView"
                        android:layout_width="20dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white"
                        android:background="@drawable/button_background"
                        android:layout_marginVertical="16dp"
                        android:contentDescription="@string/right_page" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.core.widget.NestedScrollView>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/movies_floating"
                style="@style/GradientFabRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="65dp"
                android:backgroundTint="@color/semi_transparent"
                android:contentDescription="@string/buttom_for_to_see_the_different_kind_of_movies"
                android:foreground="@drawable/floating_background"
                android:src="@drawable/ic_movies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:maxImageSize="30dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</androidx.constraintlayout.widget.ConstraintLayout>